kubernetes.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: furniture-replications
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: furniture-replications
  namespace: furniture-replications
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - furniturereplications.com
    - www.furniturereplications.com
    secretName: furniture-replications-tls
  rules:
  - host: furniturereplications.com
    http:
      paths:
      - path: /
        backend:
          serviceName: furniture-replications
          servicePort: 80
  - host: www.furniturereplications.com
    http:
      paths:
      - path: /
        backend:
          serviceName: furniture-replications
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: furniture-replications
  namespace: furniture-replications
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: furniture-replications
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: furniture-replications
  namespace: furniture-replications
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: furniture-replications
    spec:
      containers:
      - image: registry.smirlwebs.com/smirl/furniture-replications:1.0.2
        imagePullPolicy: Always
        name: furniture-replications
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry.smirlwebs.com
